[gd_scene load_steps=6 format=3 uid="uid://cu0uufmxba8f"]

[ext_resource type="Script" path="res://Objects/healing_tower.gd" id="1_3yofn"]
[ext_resource type="Texture2D" uid="uid://cj36abr2rvme2" path="res://Assets/Objects/HealingTower.png" id="1_e52ru"]
[ext_resource type="Texture2D" uid="uid://cddj8blsgeb2i" path="res://Assets/Objects/bomberBomb.png" id="2_2vdxh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mr3ty"]
radius = 47.1275

[sub_resource type="CircleShape2D" id="CircleShape2D_r0k4k"]
radius = 107.517

[node name="HealingTower" type="StaticBody2D"]
collision_layer = 16
collision_mask = 11
input_pickable = true
script = ExtResource("1_3yofn")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_e52ru")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-22, 15, -20, 16, -22, -66, -28, -67, -32, -8, -28, -8, -25, -67)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(21, 16, 19, 15, 23, -65, 28, -66, 30, -9, 29, -9, 26, -64, 24, -64)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -2)
shape = SubResource("CircleShape2D_mr3ty")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
modulate = Color(0, 100, 100, 0.18)
show_behind_parent = true
position = Vector2(16, 37)
scale = Vector2(0.135333, 0.13525)
texture = ExtResource("2_2vdxh")

[node name="EnemySensor" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySensor"]
shape = SubResource("CircleShape2D_r0k4k")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="body_entered" from="EnemySensor" to="." method="_on_enemy_sensor_body_entered"]
[connection signal="body_exited" from="EnemySensor" to="." method="_on_enemy_sensor_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
